# pagedownload

./: .gitignore  README.md  pyproject.toml
src/pagedownload/: __init__.py  main.py
