[project]
name = "pagedownload"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "sou1118", email = "hello@kattyan.dev" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
